cloud-infra-macros/tests/fails/maximum_message_size_boundary_low.stderr
error: value should be at least 1024
 --> tests/fails/maximum_message_size_boundary_low.rs:4:38
  |
4 |     let size = maximum_message_size!(1023);
  |                                      ^^^^
